--- a/index/index.ipynb
+++ b/index/index.ipynb
@@ -84,6 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 594][UVa594]: **One Little, Two Little, Three Little Endians** ([code][UVa594:code])<br>\n",
+    "understand `int.to_bytes` and `int.from_bytes` to translate from *little* and *big* endian integer encodings. Possibly interesting to do the job myself, instead of using Python standard library.\n",
+    "\n",
+    "[UVa594]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=535\n",
+    "[UVa594:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/594.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 11173][UVa11173]: **Gray codes** ([code][UVa11173:code])<br>\n",
     "elegant solution using bits manipulation, maybe the set of test cases is quite big, my sol runs in 2.48 sec, against a time limit of 3 sec. The theory behind this sol is given by [Frank Ruskey][fr] in his [Combinatorial Generation][cg] book.\n",
     "\n",
