--- a/index/index.ipynb
+++ b/index/index.ipynb
@@ -84,6 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 11933][UVa11933]: **Splitting Numbers** ([code][UVa11933:code])<br>\n",
+    "introductory exercise on *bit manipulation*, it requires to find all bits `1` in the given integers.\n",
+    "\n",
+    "[UVa11933]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=3084\n",
+    "[UVa11933:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11933.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 594][UVa594]: **One Little, Two Little, Three Little Endians** ([code][UVa594:code])<br>\n",
     "understand `int.to_bytes` and `int.from_bytes` to translate from *little* and *big* endian integer encodings. Possibly interesting to do the job myself, instead of using Python standard library.\n",
     "\n",
