--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -7,7 +7,7 @@
     "<div align=\"right\">Massimo Nocentini<br>May 21, 2016: basics, subsets sums</div>\n",
     "\n",
     "<div align=\"center\">\n",
-    "**Abstract**<br>\n",
+    "<b>Abstract</b><br>\n",
     "This document collect some examples about *bit manipulation techniques* and some application of them to contest problems\n",
     "</div>"
    ]
