--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -16,23 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Competitive Programming\n",
-    "\n",
-    "In [my repo][my] I put my programming training, mostly based on the [CP book][cpbook], against \n",
-    "[UVa judge][UVa:judge]. \n",
-    "\n",
-    "This document is an index of the problems I've worked on, possibly with some comments.\n",
-    "\n",
-    "[cpbook]:http://cpbook.net/#CP3details\n",
-    "[UVa:judge]:https://uva.onlinejudge.org/index.php?option=com_frontpage&Itemid=1\n",
-    "[my]:https://github.com/massimo-nocentini/competitive-programming"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## RTE problems"
+    "# RTE problems"
    ]
   },
   {
@@ -50,8 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solved problems\n",
-    "The following content grows as a stack, namely most recently solved on top:\n"
+    "# Solved problems"
    ]
   },
   {
@@ -81,9 +64,11 @@
    "metadata": {},
    "source": [
     "[UVa 11173][UVa11173]: **Gray codes** ([code][UVa11173:code])<br>\n",
-    "elegant solution using bits manipulation, maybe the set of test cases is quite big, my sol runs in 2.48 sec, against a time limit of 3 sec. \n",
+    "elegant solution using bits manipulation, maybe the set of test cases is quite big, my sol runs in 2.48 sec, against a time limit of 3 sec. Theory behind this sol can be found in [this tutorial][tutorial].\n",
+    "\n",
     "[UVa11173]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=2114\n",
-    "[UVa11173:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11173.py"
+    "[UVa11173:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11173.py\n",
+    "[tutorial]:http://nbviewer.jupyter.org/github/massimo-nocentini/competitive-programming/blob/master/tutorials/graycodes.ipynb?flush_cache=true"
    ]
   },
   {
