--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -314,9 +314,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another order of generation can be used for subsets, namely we see each subset as a Gray code. In this way we know that consecutive subsets differs *exactly* by one bit, which is the same to say that they have the same objects but one, so one object goes away or comes in. \n",
+    "Another order of generation can be used for subsets, namely we see each subset as a [Gray code][gray]. In this way we know that consecutive subsets differs *exactly* by one bit, which is the same to say that they have the same objects but one, so *one* object goes away or comes in. \n",
     "\n",
-    "Here is the a new function `subsets_sums_gray` that uses two hooks; given two consecutive subsets and `p` the position of the bit that toggle, if it switches *off* then `off` hook removes the corresponding value from the sum cumulated up to now, otherwise adds it."
+    "Here is the a new function `subsets_sums_gray` that uses two hooks; given two consecutive subsets and `p` is the position of the bit `b` that toggles, if `b` switches *off* then `off` hook removes the corresponding value `S[p]` from the sum cumulated up to now, otherwise `add` hook adds `S[p]` to the sum.\n",
+    "\n",
+    "[gray]:http://nbviewer.jupyter.org/github/massimo-nocentini/competitive-programming/blob/master/tutorials/graycodes.ipynb?flush_cache=true"
    ]
   },
   {
@@ -417,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "checking that the answers are the same:"
+    "checking that the answers are the same"
    ]
   },
   {
@@ -464,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "using this order of subsets generations we see that we gain approximately a **10-factor** respect the \"usual\" generation order."
+    "using this order of subsets generations we gain approximately a **10-factor** respect the \"usual\" generation order."
    ]
   }
  ],
