--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -41,8 +41,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 10264][UVa10264]: **The Most Potent Corner** ([code][UVa10264:code])<br>\n",
+    "$N$-dimensional cube, find corner's connections by *bitwise toggling*. At first I didn't understand the order of vertices, then resort to [this help][help] and implement it in a pythonic way, namely avoiding redundant code and doubled neighbours computation.\n",
+    "\n",
+    "[UVa10264]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=1205\n",
+    "[UVa10264:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/10264.py\n",
+    "[help]:https://saicheems.wordpress.com/2013/08/21/uva-10264-the-most-potent-corner-2/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 11933][UVa11933]: **Splitting Numbers** ([code][UVa11933:code])<br>\n",
-    "introductory exercise on *bit manipulation*, it requires to find all bits `1` in the given integers.\n",
+    "introductory exercise on *bit manipulation*, it requires to find all bits `1` in the given integers. Useful to implement utility functions.\n",
     "\n",
     "[UVa11933]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=3084\n",
     "[UVa11933:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11933.py"
