--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini\n",
+    "<br>May 23, 2016: n-Queens\n",
     "<br>May 22, 2016: subsets sums with Gray codes\n",
     "<br>May 21, 2016: basics, subsets sums\n",
     "</div>\n",
@@ -467,6 +468,324 @@
    "metadata": {},
    "source": [
     "using this order of subsets generations we gain approximately a **10-factor** respect the \"usual\" generation order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $n$-Queens problem\n",
+    "\n",
+    "In this section we provide a pythonic implementation of the $n$-Queens problem, using the approach described by [Ruskey][ruskey] in Chapter 3 of his book [Combinatorial Generation][cg]. We use three *bit masks*, namely integers, to represent whether a row, a raising $\\nearrow$ and a falling $\\searrow$ diagonal are \"under attack\" by an already placed queen, instead of three boolean arrays. It is sufficient to use *one* bit only to represent that a cell on a diagonal is under attack because:\n",
+    "\n",
+    "   - if the diagonal is raising, call it $d_\\nearrow$, then $a_{r_{1}, c_{1}}\\in d_\\nearrow \\wedge a_{r_{2}, c_{2}} \\in d_\\nearrow$ if and only if $r_{1}+c_{1}=r_{2}+c_{2}$; in words, the sum of the row and column indices is constant along raising diagonals.\n",
+    "   - if the diagonal is falling, call it $d_\\searrow$, then $a_{r_{1}, c_{1}}\\in d_\\searrow \\wedge a_{r_{2}, c_{2}} \\in d_\\searrow$ if and only if $c_{1}-r_{1}=c_{2}-r_{2}$; in words, the difference of the column and row indices is constant along falling diagonals.\n",
+    "   \n",
+    "Here's the code:\n",
+    "\n",
+    "[ruskey]:http://webhome.cs.uvic.ca/~ruskey/\n",
+    "[cg]:http://www.1stworks.com/ref/RuskeyCombGen.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def queens(n):\n",
+    "    \"\"\"\n",
+    "    Return an iterable of solutions to the `n`-Queens problem.\n",
+    "    \"\"\"\n",
+    "    sol, a, raises, falls = [0] * n, set_all(n), set_all(2*n-1), set_all(2*n-1)\n",
+    "    \n",
+    "    def gen(c):\n",
+    "        nonlocal a, raises, falls\n",
+    "        for r in range(n):\n",
+    "            \n",
+    "            raising = c + r\n",
+    "            falling = (c - r) % (2*n-1) # we use a modular ring in order to handle the case r > c, in this way\n",
+    "                                        # negative positions appear in the most significant part of `falling`\n",
+    "            \n",
+    "            if is_on(a, r) and is_on(raises, raising) and is_on(falls, falling):\n",
+    "                \n",
+    "                sol[c] = r\n",
+    "                \n",
+    "                a = clear_bit(a, r)\n",
+    "                raises = clear_bit(raises, raising)\n",
+    "                falls = clear_bit(falls, falling)\n",
+    "                \n",
+    "                if c == n-1:\n",
+    "                    yield sol\n",
+    "                else:\n",
+    "                    yield from gen(c+1)\n",
+    "                \n",
+    "                a = set_bit(a, r)\n",
+    "                raises = set_bit(raises, raising)\n",
+    "                falls = set_bit(falls, falling)\n",
+    "            \n",
+    "    return gen(0)\n",
+    "\n",
+    "def pretty(sol):\n",
+    "    n = len(sol)\n",
+    "    s = \"\"\n",
+    "    for r in range(n):\n",
+    "        pos = sol.index(r)\n",
+    "        s += \"|{}|\\n\".format(\"|\".join('Q' if c == pos else ' ' for c in range(n)))\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple case with a $5\\times 5$ board, so an instance of $5$-Queens problem:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sol 0:\n",
+      "|Q| | | | |\n",
+      "| | | |Q| |\n",
+      "| |Q| | | |\n",
+      "| | | | |Q|\n",
+      "| | |Q| | |\n",
+      "\n",
+      "sol 1:\n",
+      "|Q| | | | |\n",
+      "| | |Q| | |\n",
+      "| | | | |Q|\n",
+      "| |Q| | | |\n",
+      "| | | |Q| |\n",
+      "\n",
+      "sol 2:\n",
+      "| | |Q| | |\n",
+      "|Q| | | | |\n",
+      "| | | |Q| |\n",
+      "| |Q| | | |\n",
+      "| | | | |Q|\n",
+      "\n",
+      "sol 3:\n",
+      "| | | |Q| |\n",
+      "|Q| | | | |\n",
+      "| | |Q| | |\n",
+      "| | | | |Q|\n",
+      "| |Q| | | |\n",
+      "\n",
+      "sol 4:\n",
+      "| |Q| | | |\n",
+      "| | | |Q| |\n",
+      "|Q| | | | |\n",
+      "| | |Q| | |\n",
+      "| | | | |Q|\n",
+      "\n",
+      "sol 5:\n",
+      "| | | | |Q|\n",
+      "| | |Q| | |\n",
+      "|Q| | | | |\n",
+      "| | | |Q| |\n",
+      "| |Q| | | |\n",
+      "\n",
+      "sol 6:\n",
+      "| |Q| | | |\n",
+      "| | | | |Q|\n",
+      "| | |Q| | |\n",
+      "|Q| | | | |\n",
+      "| | | |Q| |\n",
+      "\n",
+      "sol 7:\n",
+      "| | | | |Q|\n",
+      "| |Q| | | |\n",
+      "| | | |Q| |\n",
+      "|Q| | | | |\n",
+      "| | |Q| | |\n",
+      "\n",
+      "sol 8:\n",
+      "| | | |Q| |\n",
+      "| |Q| | | |\n",
+      "| | | | |Q|\n",
+      "| | |Q| | |\n",
+      "|Q| | | | |\n",
+      "\n",
+      "sol 9:\n",
+      "| | |Q| | |\n",
+      "| | | | |Q|\n",
+      "| |Q| | | |\n",
+      "| | | |Q| |\n",
+      "|Q| | | | |\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, s in enumerate(queens(5)):\n",
+    "    print(\"sol {}:\\n{}\".format(i, pretty(s)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A more demanding case $20$-Queens, build the generator for solutions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "more_queens = queens(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and ask for the first 5 of them; in this case we see that some time is required to reach the first leaf in the *backtracking tree* which is also a valid solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution computed in 3.4351 secs:\n",
+      "|Q| | | | | | | | | | | | | | | | | | | |\n",
+      "| | | |Q| | | | | | | | | | | | | | | | |\n",
+      "| |Q| | | | | | | | | | | | | | | | | | |\n",
+      "| | | | |Q| | | | | | | | | | | | | | | |\n",
+      "| | |Q| | | | | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | |Q| |\n",
+      "| | | | | | | | | | | | | | | | |Q| | | |\n",
+      "| | | | | | | | | | | | | | |Q| | | | | |\n",
+      "| | | | | | | | | | | |Q| | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | |Q| | | | |\n",
+      "| | | | | | | | | | | | | | | | | | | |Q|\n",
+      "| | | | | | | |Q| | | | | | | | | | | | |\n",
+      "| | | | | |Q| | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | |Q| | |\n",
+      "| | | | | | |Q| | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | |Q| | | | | | | |\n",
+      "| | | | | | | | | | |Q| | | | | | | | | |\n",
+      "| | | | | | | | |Q| | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | |Q| | | | | | |\n",
+      "| | | | | | | | | |Q| | | | | | | | | | |\n",
+      "\n",
+      "Solution computed in 0.00013328 secs:\n",
+      "|Q| | | | | | | | | | | | | | | | | | | |\n",
+      "| | | |Q| | | | | | | | | | | | | | | | |\n",
+      "| |Q| | | | | | | | | | | | | | | | | | |\n",
+      "| | | | |Q| | | | | | | | | | | | | | | |\n",
+      "| | |Q| | | | | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | |Q| | | |\n",
+      "| | | | | | | | | | | | | | | | | | |Q| |\n",
+      "| | | | | | | | | | | | | | | |Q| | | | |\n",
+      "| | | | | | | | | | | |Q| | | | | | | | |\n",
+      "| | | | | | | | | | | | | | |Q| | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | | |Q|\n",
+      "| | | | | | | |Q| | | | | | | | | | | | |\n",
+      "| | | | | |Q| | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | |Q| | |\n",
+      "| | | | | | |Q| | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | |Q| | | | | | | |\n",
+      "| | | | | | | | | | |Q| | | | | | | | | |\n",
+      "| | | | | | | | |Q| | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | |Q| | | | | | |\n",
+      "| | | | | | | | | |Q| | | | | | | | | | |\n",
+      "\n",
+      "Solution computed in 0.69078 secs:\n",
+      "|Q| | | | | | | | | | | | | | | | | | | |\n",
+      "| | | |Q| | | | | | | | | | | | | | | | |\n",
+      "| |Q| | | | | | | | | | | | | | | | | | |\n",
+      "| | | | |Q| | | | | | | | | | | | | | | |\n",
+      "| | |Q| | | | | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | |Q| | | | |\n",
+      "| | | | | | | | | | | | | | | | | | | |Q|\n",
+      "| | | | | | | | | | | | | | | | |Q| | | |\n",
+      "| | | | | | | | | | | |Q| | | | | | | | |\n",
+      "| | | | | | | | | | | | | |Q| | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | |Q| | |\n",
+      "| | | | | | |Q| | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | |Q| |\n",
+      "| | | | | |Q| | | | | | | | | | | | | | |\n",
+      "| | | | | | | |Q| | | | | | | | | | | | |\n",
+      "| | | | | | | | | |Q| | | | | | | | | | |\n",
+      "| | | | | | | | | | | | |Q| | | | | | | |\n",
+      "| | | | | | | | | | | | | | |Q| | | | | |\n",
+      "| | | | | | | | |Q| | | | | | | | | | | |\n",
+      "| | | | | | | | | | |Q| | | | | | | | | |\n",
+      "\n",
+      "Solution computed in 0.37144 secs:\n",
+      "|Q| | | | | | | | | | | | | | | | | | | |\n",
+      "| | | |Q| | | | | | | | | | | | | | | | |\n",
+      "| |Q| | | | | | | | | | | | | | | | | | |\n",
+      "| | | | |Q| | | | | | | | | | | | | | | |\n",
+      "| | |Q| | | | | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | |Q| | | | |\n",
+      "| | | | | | | | | | | |Q| | | | | | | | |\n",
+      "| | | | | | | | | | | | | | |Q| | | | | |\n",
+      "| | | | | | | | | | | | | | | | |Q| | | |\n",
+      "| | | | | | | | | | | | | |Q| | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | | |Q|\n",
+      "| | | | | | | | |Q| | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | |Q| |\n",
+      "| | | | | |Q| | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | |Q| | |\n",
+      "| | | | | | | | | | |Q| | | | | | | | | |\n",
+      "| | | | | | | | | | | | |Q| | | | | | | |\n",
+      "| | | | | | |Q| | | | | | | | | | | | | |\n",
+      "| | | | | | | | | |Q| | | | | | | | | | |\n",
+      "| | | | | | | |Q| | | | | | | | | | | | |\n",
+      "\n",
+      "Solution computed in 0.074047 secs:\n",
+      "|Q| | | | | | | | | | | | | | | | | | | |\n",
+      "| | | |Q| | | | | | | | | | | | | | | | |\n",
+      "| |Q| | | | | | | | | | | | | | | | | | |\n",
+      "| | | | |Q| | | | | | | | | | | | | | | |\n",
+      "| | |Q| | | | | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | |Q| | | | | |\n",
+      "| | | | | | | | | | | |Q| | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | |Q| | | | |\n",
+      "| | | | | | | | | | | | |Q| | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | | | |Q|\n",
+      "| | | | | | | | | | | | | | | | |Q| | | |\n",
+      "| | | | | | | | | | | | | | | | | | |Q| |\n",
+      "| | | | | | | | | |Q| | | | | | | | | | |\n",
+      "| | | | | |Q| | | | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | | | | | |Q| | |\n",
+      "| | | | | | | | | | |Q| | | | | | | | | |\n",
+      "| | | | | | | |Q| | | | | | | | | | | | |\n",
+      "| | | | | | | | | | | | | |Q| | | | | | |\n",
+      "| | | | | | |Q| | | | | | | | | | | | | |\n",
+      "| | | | | | | | |Q| | | | | | | | | | | |\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    with timing(lambda: next(more_queens)) as (s, start, end):\n",
+    "        print(\"Solution computed in {:.5} secs:\\n{}\".format(end-start, pretty(s)))"
    ]
   }
  ],
