Refactored n-Queens problem.

--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -499,34 +499,26 @@
     "    \"\"\"\n",
     "    Return an iterable of solutions to the `n`-Queens problem.\n",
     "    \"\"\"\n",
-    "    sol, a, raises, falls = [0] * n, set_all(n), set_all(2*n-1), set_all(2*n-1)\n",
+    "    sol = [0] * n\n",
     "    \n",
-    "    def gen(c):\n",
-    "        nonlocal a, raises, falls\n",
+    "    def gen(c, rows, raises, falls):\n",
+    "        \n",
     "        for r in range(n):\n",
     "            \n",
     "            raising = c + r\n",
     "            falling = (c - r) % (2*n-1) # we use a modular ring in order to handle the case r > c, in this way\n",
-    "                                        # negative positions appear in the most significant part of `falling`\n",
+    "                                        # negative positions appear in the most significant part of `falls`\n",
     "            \n",
-    "            if is_on(a, r) and is_on(raises, raising) and is_on(falls, falling):\n",
+    "            if is_on(rows, r) and is_on(raises, raising) and is_on(falls, falling):\n",
     "                \n",
     "                sol[c] = r\n",
     "                \n",
-    "                a = clear_bit(a, r)\n",
-    "                raises = clear_bit(raises, raising)\n",
-    "                falls = clear_bit(falls, falling)\n",
+    "                yield from [sol] if c == n-1 else gen(c+1, \n",
+    "                                                      clear_bit(rows, r), \n",
+    "                                                      clear_bit(raises, raising), \n",
+    "                                                      clear_bit(falls, falling))\n",
     "                \n",
-    "                if c == n-1:\n",
-    "                    yield sol\n",
-    "                else:\n",
-    "                    yield from gen(c+1)\n",
-    "                \n",
-    "                a = set_bit(a, r)\n",
-    "                raises = set_bit(raises, raising)\n",
-    "                falls = set_bit(falls, falling)\n",
-    "            \n",
-    "    return gen(0)\n",
+    "    return gen(0, set_all(n), set_all(2*n-1), set_all(2*n-1))\n",
     "\n",
     "def pretty(sol):\n",
     "    n = len(sol)\n",
@@ -546,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -660,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -669,7 +661,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution computed in 3.4351 secs:\n",
+      "Solution computed in 3.1767 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -691,7 +683,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.00013328 secs:\n",
+      "Solution computed in 8.9407e-05 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -713,7 +705,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.69078 secs:\n",
+      "Solution computed in 0.56432 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -735,7 +727,7 @@
       "| | | | | | | | |Q| | | | | | | | | | | |\n",
       "| | | | | | | | | | |Q| | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.37144 secs:\n",
+      "Solution computed in 0.3538 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -757,7 +749,7 @@
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "| | | | | | | |Q| | | | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.074047 secs:\n",
+      "Solution computed in 0.08652 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
