Fix `low_bit` utility function. Add `Y-mino` problem in the *bit mask* tutorial.

--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -779,6 +779,553 @@
     "    with timing(lambda: next(more_queens)) as (s, start, end):\n",
     "        print(\"Solution computed in {:.5} secs:\\n{}\".format(end-start, pretty(s)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $Y$-mino problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "  *\n",
+    "* * *\n",
+    "  *\n",
+    "\"\"\"\n",
+    "X_shape = lambda r, c: [((r, c), (r-1, c+1), (r, c+1), (r+1, c+1), (r, c+2))]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "*\n",
+    "*\n",
+    "*\n",
+    "*\n",
+    "\n",
+    "* * * * *\n",
+    "\"\"\"\n",
+    "I_shape = lambda r, c: [((r, c), (r+1,c), (r+2,c), (r+3,c), (r+4,c)),\n",
+    "                        ((r, c), (r,c+1), (r,c+2), (r,c+3), (r,c+4))]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "*\n",
+    "* * *\n",
+    "\n",
+    "* * *\n",
+    "    *\n",
+    "    *\n",
+    "\n",
+    "    *\n",
+    "    *\n",
+    "* * *\n",
+    "\n",
+    "* * *\n",
+    "*\n",
+    "*\n",
+    "\"\"\"\n",
+    "V_shape = lambda r, c: [((r,c), (r+1,c), (r+2,c), (r+2, c+1), (r+2, c+2)),\n",
+    "                        ((r,c), (r, c+1), (r,c+2), (r+1, c+2), (r+2, c+2)),\n",
+    "                        ((r,c), (r,c+1), (r-2,c+2), (r-1,c+2), (r, c+2)),\n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r,c+1), (r, c+2))]\n",
+    "\n",
+    "\"\"\"\n",
+    "* *\n",
+    "*\n",
+    "* *\n",
+    "\n",
+    "* * *\n",
+    "*   *\n",
+    "\n",
+    "*   *\n",
+    "* * *\n",
+    "\n",
+    "* *\n",
+    "  *\n",
+    "* *  \n",
+    "\"\"\"\n",
+    "U_shape = lambda r, c: [((r,c), (r+1,c), (r+2,c), (r,c+1), (r+2,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r, c+1), (r,c+2), (r+1,c+2)),\n",
+    "                        ((r,c), (r+1, c), (r+1, c+1), (r, c+2), (r+1, c+2)),\n",
+    "                        ((r,c), (r+2, c), (r, c+1), (r+1, c+1), (r+2, c+1)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* *\n",
+    "  * *\n",
+    "  \n",
+    "* *\n",
+    "  * *\n",
+    "    *\n",
+    "\n",
+    "    *\n",
+    "  * *\n",
+    "* *\n",
+    "\n",
+    "  * *\n",
+    "* *\n",
+    "*\n",
+    "\"\"\"\n",
+    "W_shape = lambda r, c: [((r,c), (r+1,c), (r+1,c+1), (r+2,c+1), (r+2,c+2)),\n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r+1,c+2), (r+2,c+2)),\n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r-2,c+2), (r-1,c+2)),\n",
+    "                        ((r,c), (r+1,c), (r-1,c+1), (r,c+1), (r-1,c+2)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "* * *\n",
+    "  *\n",
+    "  *\n",
+    "  \n",
+    "*\n",
+    "* * *\n",
+    "*\n",
+    "\n",
+    "    *\n",
+    "* * *\n",
+    "    *\n",
+    "\n",
+    "  *\n",
+    "  *\n",
+    "* * *\n",
+    "\"\"\"\n",
+    "T_shape = lambda r, c: [((r,c), (r,c+1), (r+1,c+1), (r+2,c+1), (r,c+2)),\n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r+1,c+1), (r+1,c+2)),\n",
+    "                        ((r,c), (r,c+1), (r-1,c+2), (r,c+2), (r+1,c+2)),\n",
+    "                        ((r,c), (r-2,c+1), (r-1,c+1), (r,c+1), (r,c+2)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* * *\n",
+    "    *\n",
+    "\n",
+    "    *\n",
+    "* * *\n",
+    "*\n",
+    "\n",
+    "  * *  \n",
+    "  * \n",
+    "* *\n",
+    "\n",
+    "* *\n",
+    "  *\n",
+    "  * *\n",
+    "\"\"\"\n",
+    "Z_shape = lambda r, c: [((r,c), (r+1,c), (r+1,c+1), (r+1,c+2), (r+2,c+2)),\n",
+    "                        ((r,c), (r+1,c), (r,c+1), (r-1,c+2), (r,c+2)),\n",
+    "                        ((r,c), (r-2,c+1), (r-1,c+1), (r,c+1), (r-2,c+2)),\n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r+2,c+1), (r+2,c+2)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* *\n",
+    "  *\n",
+    "  *\n",
+    "  \n",
+    "  *\n",
+    "* *\n",
+    "*\n",
+    "*\n",
+    "\n",
+    "*\n",
+    "*\n",
+    "* *\n",
+    "  *\n",
+    "  \n",
+    "  *\n",
+    "  *\n",
+    "* *\n",
+    "*\n",
+    "\n",
+    "  * * *\n",
+    "* *\n",
+    "\n",
+    "* *\n",
+    "  * * *\n",
+    "\n",
+    "* * *\n",
+    "    * *\n",
+    "\n",
+    "    * *\n",
+    "* * *\n",
+    "\"\"\"\n",
+    "N_shape = lambda r, c: [((r,c), (r+1,c), (r+1,c+1), (r+2,c+1), (r+3,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r-1,c+1), (r,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r+2,c+1), (r+3,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r-2,c+1), (r-1,c+1), (r,c+1)),\n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r-1,c+2), (r-1,c+3)),\n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r+1,c+2), (r+1,c+3)),\n",
+    "                        ((r,c), (r,c+1), (r,c+2), (r+1,c+2), (r+1,c+3)),\n",
+    "                        ((r,c), (r,c+1), (r-1,c+2), (r,c+2), (r-1,c+3)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "*\n",
+    "*\n",
+    "* *\n",
+    "  \n",
+    "  *\n",
+    "  *\n",
+    "  *\n",
+    "* *\n",
+    "\n",
+    "* *\n",
+    "  *\n",
+    "  *\n",
+    "  *\n",
+    "  \n",
+    "* *\n",
+    "*\n",
+    "*\n",
+    "*\n",
+    "\n",
+    "*\n",
+    "* * * *\n",
+    "\n",
+    "* * * *\n",
+    "*\n",
+    "\n",
+    "      *\n",
+    "* * * *\n",
+    "\n",
+    "* * * *\n",
+    "      *\n",
+    "\n",
+    "\"\"\"\n",
+    "L_shape = lambda r, c: [((r,c), (r+1,c), (r+2,c), (r+3,c), (r+3,c+1)),\n",
+    "                        ((r,c), (r-3,c+1), (r-2,c+1), (r-1,c+1), (r,c+1)),                        \n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r+2,c+1), (r+3,c+1)),                        \n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r+3,c), (r,c+1)),                        \n",
+    "                        ((r,c), (r+1,c), (r+1,c+1), (r+1,c+2), (r+1,c+3)),                        \n",
+    "                        ((r,c), (r+1,c), (r,c+1), (r,c+2), (r,c+3)),                        \n",
+    "                        ((r,c), (r,c+1), (r,c+2), (r-1,c+3), (r,c+3)),                        \n",
+    "                        ((r,c), (r,c+1), (r,c+2), (r,c+3), (r+1,c+3)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* *\n",
+    "*\n",
+    "*\n",
+    "\n",
+    "*\n",
+    "*\n",
+    "* *\n",
+    "*\n",
+    "\n",
+    "  *\n",
+    "* *\n",
+    "  *\n",
+    "  *\n",
+    "  \n",
+    "  *\n",
+    "  *\n",
+    "* *\n",
+    "  *\n",
+    "\n",
+    "* * * *\n",
+    "    *\n",
+    "    \n",
+    "    *\n",
+    "* * * *\n",
+    "\n",
+    "* * * *\n",
+    "  *\n",
+    "  \n",
+    "  *\n",
+    "* * * *    \n",
+    "\"\"\"\n",
+    "Y_shape = lambda r, c: [((r,c), (r+1,c), (r+2,c), (r+3,c), (r+1,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r+3,c), (r+2,c+1)),                        \n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r+1,c+1), (r+2,c+1)),                        \n",
+    "                        ((r,c), (r-2,c+1), (r-1,c+1), (r,c+1), (r+1,c+1)),                        \n",
+    "                        ((r,c), (r,c+1), (r,c+2), (r+1,c+2), (r,c+3)),                        \n",
+    "                        ((r,c), (r,c+1), (r-1,c+2), (r,c+2), (r,c+3)),                        \n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r,c+2), (r,c+3)),                        \n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r,c+2), (r,c+3)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* * *\n",
+    "  *\n",
+    "  \n",
+    "    *\n",
+    "* * *\n",
+    "  *\n",
+    " \n",
+    "  *\n",
+    "* * *\n",
+    "*\n",
+    "\n",
+    "  *\n",
+    "* * *\n",
+    "    *\n",
+    "  \n",
+    "  *\n",
+    "  * *\n",
+    "* *\n",
+    "\n",
+    "  *\n",
+    "* *\n",
+    "  * *\n",
+    "  \n",
+    "* *\n",
+    "  * *\n",
+    "  *\n",
+    "  \n",
+    "  * *\n",
+    "* *\n",
+    "  *\n",
+    "\"\"\"\n",
+    "F_shape = lambda r, c: [((r,c), (r+1,c), (r+1,c+1), (r+2,c+1), (r+1,c+2)),\n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r-1,c+2), (r,c+2)),                        \n",
+    "                        ((r,c), (r+1,c), (r-1,c+1), (r,c+1), (r,c+2)),                        \n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r,c+2), (r+1,c+2)),                                                \n",
+    "                        ((r,c), (r-2,c+1), (r-1,c+1), (r,c+1), (r-1,c+2)),                                                \n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r+1,c+1), (r+1,c+2)),                                                \n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r+2,c+1), (r+1,c+2)),\n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r+1,c+1), (r-1,c+2)),]\n",
+    "\n",
+    "\"\"\"\n",
+    "*\n",
+    "* *\n",
+    "* *\n",
+    "\n",
+    "  *\n",
+    "* *\n",
+    "* *\n",
+    "\n",
+    "  * *\n",
+    "* * *\n",
+    "\n",
+    "* *\n",
+    "* * *\n",
+    "\n",
+    "* * *\n",
+    "* *\n",
+    "\n",
+    "* * *\n",
+    "  * *\n",
+    "  \n",
+    "* *\n",
+    "* *\n",
+    "*\n",
+    "\n",
+    "* *\n",
+    "* *\n",
+    "  *\n",
+    "\"\"\"\n",
+    "P_shape = lambda r, c: [((r,c), (r+1,c), (r+2,c), (r+1,c+1), (r+2,c+1)),\n",
+    "                        ((r,c), (r+1,c), (r-1,c+1), (r,c+1), (r+1,c+1)),                        \n",
+    "                        ((r,c), (r-1,c+1), (r,c+1), (r-1,c+2), (r,c+2)),                                                \n",
+    "                        ((r,c), (r+1,c), (r,c+1), (r+1,c+1), (r+1,c+2)),                                                \n",
+    "                        ((r,c), (r+1,c), (r,c+1), (r+1,c+1), (r,c+2)),                                                  \n",
+    "                        ((r,c), (r,c+1), (r+1,c+1), (r,c+2), (r+1,c+2)),                                                \n",
+    "                        ((r,c), (r+1,c), (r+2,c), (r,c+1), (r+1,c+1)),                        \n",
+    "                        ((r,c), (r+1,c), (r,c+1), (r+1,c+1), (r+2,c+1)),]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shapes =  [X_shape, I_shape, V_shape, U_shape, W_shape, T_shape, Z_shape, N_shape, L_shape, Y_shape, F_shape, P_shape]\n",
+    "symbols = ['α',     'β',     'γ',     'δ',    'ε', 'ζ', 'η', 'θ', 'ι', 'κ', 'λ', 'μ', 'ν', 'ξ', 'ο', 'π', 'ρ', 'ς', 'σ', 'τ', 'υ', 'φ', 'χ', 'ψ', 'ω']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def Y_mino(dim, shapes, availables='ones', max_depth_reached=None, forbidden=[]):\n",
+    "    \"\"\"\n",
+    "    Returns an iterable of arrangements for the Y-mino problem.\n",
+    "    \"\"\"\n",
+    "    rows, cols = dim\n",
+    "    sol = []\n",
+    "    if not availables or availables == 'ones':\n",
+    "        availables = [1]*len(shapes) \n",
+    "    elif availables == 'inf': \n",
+    "        availables = [-1]*len(shapes)\n",
+    "    \n",
+    "    def cleaner(S, cleans):\n",
+    "        for r, c in cleans:\n",
+    "            S = clear_bit(S, r + rows*c)\n",
+    "        return S\n",
+    "    \n",
+    "    def gen(positions, attempts):\n",
+    "    \n",
+    "        p = low_bit(positions)\n",
+    "        \n",
+    "        c, r = divmod(p, rows)\n",
+    "        \n",
+    "        for i, block in enumerate(s(r, c) for s in shapes):\n",
+    "            \n",
+    "            if not availables[i]: continue\n",
+    "            \n",
+    "            for j, orientation in enumerate(block):\n",
+    "                \n",
+    "                if all(0 <= rr < rows and 0 <= cc < cols and is_on(positions, rr + rows*cc) \n",
+    "                       for rr, cc in orientation):\n",
+    "                    \n",
+    "                    sol.append((p, i, j, orientation))\n",
+    "                    \n",
+    "                    availables[i] -= 1\n",
+    "                    new_positions = cleaner(positions, orientation)\n",
+    "                        \n",
+    "                    yield from [sol] if not new_positions or not attempts else gen(new_positions, attempts-1)\n",
+    "                \n",
+    "                    sol.pop()\n",
+    "                    availables[i] += 1\n",
+    "        \n",
+    "    return gen(cleaner(set_all(rows*cols), forbidden), max_depth_reached or -1)\n",
+    "\n",
+    "def pretty(sol, dim, symbols):\n",
+    "    from collections import defaultdict\n",
+    "    table = defaultdict(lambda: '*')\n",
+    "    for p, i, j, pairs in sol:\n",
+    "        for r, c in pairs:\n",
+    "            table[r,c] = symbols[i]\n",
+    "    \n",
+    "    rows, cols = dim\n",
+    "    s = ''\n",
+    "    for r in range(rows): \n",
+    "        s += ' '.join(table[r, c] for c in range(cols)) + '\\n'\n",
+    "\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dim = (6,10)\n",
+    "polys_sols = Y_mino(dim, shapes, availables='ones', forbidden=[(0,0), (1,0), (2,0), (3,0), (4,0), \n",
+    "                                                               (1,9),(2,9),(3,9),(4,9), (5,9),\n",
+    "                                                               (1,5), (2, 4), (2, 5), (3, 4), (3,5)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-st solution computed in 0.0633 secs:\n",
+      "* γ γ γ δ δ δ ζ ζ ζ\n",
+      "* ι ι γ δ * δ λ ζ *\n",
+      "* ι μ γ * * λ λ ζ *\n",
+      "* ι μ μ * * η λ λ *\n",
+      "* ι μ μ θ θ η η η *\n",
+      "β β β β β θ θ θ η *\n",
+      "\n",
+      "2-sn solution computed in 0.0115 secs:\n",
+      "* γ γ γ ι ι ι ι λ λ\n",
+      "* μ μ γ ι * ε λ λ *\n",
+      "* μ μ γ * * ε ε λ *\n",
+      "* δ μ δ * * η ε ε *\n",
+      "* δ δ δ θ θ η η η *\n",
+      "β β β β β θ θ θ η *\n",
+      "\n",
+      "3-rd solution computed in 0.0184 secs:\n",
+      "* γ γ γ ι ι ι ι λ λ\n",
+      "* γ μ μ ι * ε λ λ *\n",
+      "* γ μ μ * * ε ε λ *\n",
+      "* δ μ δ * * η ε ε *\n",
+      "* δ δ δ θ θ η η η *\n",
+      "β β β β β θ θ θ η *\n",
+      "\n",
+      "4-th solution computed in 0.0132 secs:\n",
+      "* γ γ γ θ θ δ δ λ λ\n",
+      "* γ θ θ θ * δ λ λ *\n",
+      "* γ ε ε * * δ δ λ *\n",
+      "* ε ε κ * * ζ μ μ *\n",
+      "* ε κ κ κ κ ζ μ μ *\n",
+      "β β β β β ζ ζ ζ μ *\n",
+      "\n",
+      "5-th solution computed in 0.00551 secs:\n",
+      "* γ γ γ θ θ δ δ λ λ\n",
+      "* γ θ θ θ * δ λ λ *\n",
+      "* γ ε ε * * δ δ λ *\n",
+      "* ε ε κ * * η η μ *\n",
+      "* ε κ κ κ κ η μ μ *\n",
+      "β β β β β η η μ μ *\n",
+      "\n",
+      "6-th solution computed in 0.00541 secs:\n",
+      "* γ γ γ θ θ δ δ λ λ\n",
+      "* γ θ θ θ * δ λ λ *\n",
+      "* γ ε ε * * δ δ λ *\n",
+      "* ε ε κ * * μ μ μ *\n",
+      "* ε κ κ κ κ μ μ ι *\n",
+      "β β β β β ι ι ι ι *\n",
+      "\n",
+      "7-th solution computed in 0.0107 secs:\n",
+      "* γ γ γ θ θ ι ι ι ι\n",
+      "* γ θ θ θ * ι μ μ *\n",
+      "* γ ε ε * * μ μ μ *\n",
+      "* ε ε κ * * λ δ δ *\n",
+      "* ε κ κ κ κ λ λ δ *\n",
+      "β β β β β λ λ δ δ *\n",
+      "\n",
+      "8-th solution computed in 0.000244 secs:\n",
+      "* γ γ γ θ θ μ ζ ζ ζ\n",
+      "* γ θ θ θ * μ μ ζ *\n",
+      "* γ ε ε * * μ μ ζ *\n",
+      "* ε ε κ * * λ δ δ *\n",
+      "* ε κ κ κ κ λ λ δ *\n",
+      "β β β β β λ λ δ δ *\n",
+      "\n",
+      "9-th solution computed in 0.000827 secs:\n",
+      "* γ γ γ θ θ μ μ η η\n",
+      "* γ θ θ θ * μ μ η *\n",
+      "* γ ε ε * * μ η η *\n",
+      "* ε ε κ * * λ δ δ *\n",
+      "* ε κ κ κ κ λ λ δ *\n",
+      "β β β β β λ λ δ δ *\n",
+      "\n",
+      "10-th solution computed in 0.0177 secs:\n",
+      "* γ γ γ ε ε δ δ λ λ\n",
+      "* γ θ ε ε * δ λ λ *\n",
+      "* γ θ ε * * δ δ λ *\n",
+      "* θ θ κ * * ζ μ μ *\n",
+      "* θ κ κ κ κ ζ μ μ *\n",
+      "β β β β β ζ ζ ζ μ *\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    with timing(lambda: next(polys_sols)) as (s, start, end):\n",
+    "        t = (end - start, 'secs')\n",
+    "        t = (t[0] / 60, 'mins') if t[0] > 59 else t\n",
+    "        t = (t[0] / 60, 'hours') if t[0] > 59 else t\n",
+    "        o = \"st\" if not i else \"sn\"\n",
+    "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
+    "                                                                *t, pretty(s, dim, symbols)))"
+   ]
   }
  ],
  "metadata": {
