Add a little comment about order to list shape orientations in Polyominoes.

--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -820,8 +820,10 @@
     "                *                     (r-2,c+2)\n",
     "                *   ->                (r-1,c+2)\n",
     "            * * *       (r,c) (r,c+1) (r, c+2)\n",
-    "     so the orientation is coded as the iterable `((r,c), (r,c+1), (r-2,c+2), (r-1,c+2), (r, c+2))`.\n",
-    "     The section about *pentominoes* contains many examples of shapes coding.\n",
+    "     so the orientation is coded as the iterable `((r,c), (r,c+1), (r-2,c+2), (r-1,c+2), (r, c+2))`; observe how\n",
+    "     pair are listed according to the order *top to bottom* and, when rows are exausted, go the the top of the\n",
+    "     next column and repeat, so *left to right*. The section about *pentominoes* contains many examples \n",
+    "     of shapes coding.\n",
     "\n",
     "The following code implements a *backtracking* function that yields a sequence of tiling of a given board, possibly containing some forbidden cells, according to a set of available shapes.\n",
     "\n",
@@ -1778,15 +1780,6 @@
     "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
     "                                                                *t, pretty(s, dim, lower_greek_symbols())))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
